--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,9 @@
 NODE_ENV=dev
 PORT=3000
+
+# Auth
+JWT_SECRET=codesecretdev
+
+# Database
+DATABASE_URL="postgresql://docker:docker@localhost:5432/apisolid?schema=public"
+
