--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Rafael Kremser",
   "license": "ISC",
   "dependencies": {
+    "@fastify/jwt": "8.0.1",
     "@prisma/client": "5.14.0",
     "bcryptjs": "2.4.3",
     "dayjs": "1.11.11",
