--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
     "dev": "tsx watch src/server.ts",
     "start": "node build/server.js",
     "build": "tsup src --out-dir build",
-    "test": "vitest run",
-    "test:watch": "vitest",
-    "test:cov": "vitest run --coverage"
+    "test": "vitest run --dir src/use-cases",
+    "test:watch": "vitest --dir src/use-cases",
+    "test:e2e": "vitest run --dir src/http",
+    "test:cov": "vitest run --coverage",
+    "test:ui": "vitest --ui",
+    "pretest:e2e": "run-s test:create-prisma-environment test:install-prisma-environment",
+    "test:create-prisma-environment": "npm link ./prisma/vitest-environment-prisma",
+    "test:install-prisma-environment": "npm link vitest-environment-prisma"
   },
   "author": "Rafael Kremser",
   "license": "ISC",
@@ -27,6 +32,7 @@
     "@types/node": "20.12.12",
     "@vitest/coverage-v8": "1.6.0",
     "globals": "15.3.0",
+    "npm-run-all": "4.1.5",
     "prisma": "5.14.0",
     "tsup": "8.0.2",
     "tsx": "4.11.0",
