--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "vitest run --dir src/use-cases",
     "test:watch": "vitest --dir src/use-cases",
     "test:e2e": "vitest run --dir src/http",
+    "test:e2e:watch": "vitest --dir src/http",
     "test:cov": "vitest run --coverage",
     "test:ui": "vitest --ui",
     "pretest:e2e": "run-s test:create-prisma-environment test:install-prisma-environment",
@@ -30,10 +31,12 @@
   "devDependencies": {
     "@types/bcryptjs": "2.4.6",
     "@types/node": "20.12.12",
+    "@types/supertest": "6.0.2",
     "@vitest/coverage-v8": "1.6.0",
     "globals": "15.3.0",
     "npm-run-all": "4.1.5",
     "prisma": "5.15.0",
+    "supertest": "7.0.0",
     "tsup": "8.0.2",
     "tsx": "4.11.0",
     "typescript": "5.4.5",
